-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1
-
None
-
-
0c67ab2ca (dev), 28b3c34f3 (6.8)
Steps to reproduce:
- Open a .ts file, browse up and down
- Close linguist:
QObject::killTimer: Timers cannot be stopped from another thread QObject::~QObject: Timers cannot be stopped from another thread
Not sure if that is a bug in Qt or in Linguist?
- relates to
-
QTBUG-131914 qml emits warning on exit: "Timers cannot be stopped from another thread"
-
- Closed
-
For Gerrit Dashboard: QTBUG-131480 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
606428,3 | Linguist: Non-Static RecentFile QObject | dev | qt/qttools | Status: MERGED | +2 | +1 |
606490,2 | Linguist: Non-Static RecentFile QObject | 6.8 | qt/qttools | Status: MERGED | +2 | 0 |