Linguist: Non-Static RecentFile QObject

When starting the Linguist application, the MainWindow creates a static
RecentFile object (QObject). When the application terminates,
RecentFile is destructed very late by the runtime system and after
destruction of QApplication (since it's a static object)

Make RecentFile non-static so that it doesn't outlive the QApplication.

Fixes: QTBUG-131480
Pick-to: 6.8
Change-Id: I2fcb189cec70596dd5edac6b1f0a0b21d66aac44
Reviewed-by: Kai Köhne <kai.koehne@qt.io>